Fix extra spacing introduced by the new tlp tabs
Part of request #13060: TLP should match components available in Figma

672af1f5c1519ea58a955a8fb4f7ca5b1dad7479 removed the tlp tabs
background and it visually creates a big space between the artifact
title and the tabs. This commmit fix the tabs in the artifact view.

--- a/plugins/tracker/themes/default/css/style.scss
+++ b/plugins/tracker/themes/default/css/style.scss
@@ -134,7 +134,7 @@ button[name="tracker_query_submit"] {
 }
 
 .tracker-artifact-nav {
-    margin: 30px 0 20px;
+    margin: 0;
 }
 
 .tracker_report_renderer {
